--- a/apps/front/src/app/view/study-set-description/study-set-description.component.html
+++ b/apps/front/src/app/view/study-set-description/study-set-description.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['sets', id]" class="text-decoration-none">
+<a [routerLink]="['/study-set', id]" class="text-decoration-none">
   <div class="col">
     <div class="card shadow set-card" role="button">
       <div class="card-body">
