--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -9,6 +9,17 @@
     <h2>Your sets</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100">
+    <a *ngFor="let set of this.sets | async;" [routerLink]="['/study-set', set.id]" class="text-decoration-none">
+      <div class="col">
+        <div class="card shadow set-card" role="button">
+          <div class="card-body">
+            <h5 class="card-title">{{set.title}} <fa-icon *ngIf="set.private" [icon]="['far', 'eye-slash']" tooltip="This set is not public" [delay]="500" triggers="mouseenter:mouseleave"></fa-icon></h5>
+            <h6 class="card-subtitle mb-4 text-muted">{{set.cards.length}} term{{this.set.cards.length > 1 ? 's' : ''}}</h6>
+            <p class="card-text">{{set.description}}</p>
+          </div>
+        </div>
+      </div>
+    </a>
     <ng-template #cards></ng-template>
   </div>
 </div>
