--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -6,15 +6,15 @@
         <div class="form-check form-switch options-buttons">
           <div class="d-flex justify-content-between">
             <p>Written</p>
-            <input class="form-check-input options-selector" type="checkbox" role="switch" name="written" [disabled]="!trueOrFalseSelected && !multipleChoiceSelected" [(ngModel)]="writtenSelected" checked>
+            <input class="form-check-input options-selector bg-primary" type="checkbox" role="switch" name="written" [disabled]="!trueOrFalseSelected && !multipleChoiceSelected" [(ngModel)]="writtenSelected" checked>
           </div>
           <div class="d-flex justify-content-between">
             <p>True/False</p>
-            <input class="form-check-input options-selector" type="checkbox" role="switch" name="trueOrFalse" [disabled]="!writtenSelected && !multipleChoiceSelected" [(ngModel)]="trueOrFalseSelected" checked>
+            <input class="form-check-input options-selector bg-primary" type="checkbox" role="switch" name="trueOrFalse" [disabled]="!writtenSelected && !multipleChoiceSelected" [(ngModel)]="trueOrFalseSelected" checked>
           </div>
           <div class="d-flex justify-content-between">
             <p>Multiple Choice</p>
-            <input class="form-check-input options-selector" type="checkbox" role="switch" name="multipleChoice" [disabled]="!writtenSelected && !trueOrFalseSelected" [(ngModel)]="multipleChoiceSelected" checked>
+            <input class="form-check-input options-selector bg-primary" type="checkbox" role="switch" name="multipleChoice" [disabled]="!writtenSelected && !trueOrFalseSelected" [(ngModel)]="multipleChoiceSelected" checked>
           </div>
           <hr class="mb-4">
           <div class="d-flex justify-content-between options-dropdown">
