--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -1,48 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css');
+@import '../../../node_modules/bootstrap/scss/functions.scss';
+@import '../../../node_modules/bootstrap/scss/variables.scss';
 
-$body-bg: white;
 $primary: #8438ff;
+$theme-colors: map-merge($theme-colors, (
+  "primary": #8438ff
+));
 
-@import 'bootstrap';
+@import '../../../node_modules/bootstrap/scss/bootstrap.scss';
 
 body {
   background-color: white;
-}
-
-.btn-outline-primary:hover {
-  background-color: #8438ff !important;
-  outline: #8438ff !important;
-  border-color: #8438ff !important;
-  box-shadow: none !important;
-}
-
-.btn-outline-primary:active {
-  background-color: #8438ff !important;
-  outline: #8438ff !important;
-  border-color: #8438ff !important;
-  box-shadow: none !important;
-}
-
-.btn-outline-primary {
-  outline: 0 !important;
-  box-shadow: none !important;
-}
-
-.show > .btn-primary.dropdown-toggle {
-  background-color: #8438ff;
-  outline: none !important;
-}
-
-.btn-primary:focus {
-  background-color: #8438ff !important;
-  outline: #8438ff !important;
-  border-color: #8438ff !important;
-  box-shadow: none !important;
-}
-
-.btn-primary pre:focus {
-  outline: 0 !important;
 }
 
 .grecaptcha-badge {
