--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="mx-2 d-flex justify-content-between align-items-center">
           <p class="text-secondary">{{side}}</p>
-          <fa-icon class="fs-4 mb-2 text-secondary shuffle" tooltip="Enable shuffle" (click)="this.shuffleCards()" [delay]="500" [style.color]="shuffle ? '#8438ff !important' : '#6c757d !important'" [icon]="['far', 'rectangle-list']"></fa-icon>
+          <fa-icon class="fs-4 mb-2 text-secondary shuffle" tooltip="Enable shuffle" (click)="this.shuffleCards()" [delay]="500" [style.color]="shufflingEnabled ? '#8438ff !important' : '#6c757d !important'" [icon]="['far', 'rectangle-list']"></fa-icon>
         </div>
       </div>
     </div>
