--- a/apps/front/src/app/study-set/study-set.component.html
+++ b/apps/front/src/app/study-set/study-set.component.html
@@ -27,16 +27,16 @@
     <div class="d-flex justify-content-between">
       <h5>{{this.cards.length}} term{{this.cards.length > 1 ? 's' : ''}} in this set</h5>
       <div>
-        <button type="submit" class="btn btn-primary" [hidden]="editing || !userIsAuthor" (click)="editCards()">Edit</button>
+        <button type="submit" class="btn btn-primary" [hidden]="isEditing || !userIsAuthor" (click)="editCards()">Edit</button>
         <div class="d-flex">
-          <button type="submit" class="btn btn-primary mx-2" [hidden]="!editing" (click)="saveCards()">Save</button>
-          <button type="submit" class="btn btn-secondary" [hidden]="!editing" (click)="viewCards()">Cancel</button>
+          <button type="submit" class="btn btn-primary mx-2" [hidden]="!isEditing" (click)="saveCards()">Save</button>
+          <button type="submit" class="btn btn-secondary" [hidden]="!isEditing" (click)="viewCards()">Cancel</button>
         </div>
       </div>
     </div>
     <div>
       <div #cardsContainer></div>
-      <div class="container-fluid" [hidden]="!editing">
+      <div class="container-fluid" [hidden]="!isEditing">
         <div class="row">
           <div class="card my-3 bg-white">
             <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard({ editingEnabled: true })">
