--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -1,3 +1,5 @@
+<div class="navbar-spacing"></div>
+
 <div class="d-flex justify-content-center mt-5" #spinner>
   <div class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
