--- a/apps/front/src/app/homepage/homepage.component.scss
+++ b/apps/front/src/app/homepage/homepage.component.scss
@@ -17,7 +17,7 @@ a {
   height: 6rem;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and (min-device-width : 320px) {
   .sets {
     margin-left: 1.5rem;
   }
@@ -37,3 +37,4 @@ a {
     margin-left: 1rem;
   }
 }
+
