--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
@@ -4,21 +4,21 @@
     <div class="mx-4 container-fluid mt-3 mb-4">
       <p class="fs-1 text-center" *ngIf="question.type !== 'trueOrFalse'">{{question.question}}</p>
       <p class="fs-1 text-center" *ngIf="question.type === 'trueOrFalse'">{{question.question}} <fa-icon [icon]="faArrowRight"></fa-icon> {{question.trueOrFalseOption ? question.trueOrFalseOption : ''}}</p>
-      <div class="quiz-question-written" formGroupName="written-group" *ngIf="question.type === 'written'">
+      <div class="quiz-question-written" *ngIf="question.type === 'written'">
         <p class="text-secondary text-center">Answer with the corresponding {{question.answerWith}}</p>
-        <input type="text" class="form-control text-center shadow-sm fs-4" formControlName="written">
+        <input type="text" class="form-control text-center shadow-sm fs-4" formControlName="written" required>
       </div>
-      <div class="quiz-question-tf text-center" formGroupName="trueOrFalse" *ngIf="question.type === 'trueOrFalse'">
+      <div class="quiz-question-tf text-center" *ngIf="question.type === 'trueOrFalse'">
         <p class="text-secondary text-center">Answer with whether this is true or false</p>
-        <input type="radio" class="btn-check" formControlName="tf-option" [id]="'q' + question.index + '-tf-option0'" [required]="question.type === 'trueOrFalse'" value="0" autocomplete="off">
+        <input type="radio" class="btn-check" formControlName="trueOrFalse" [id]="'q' + question.index + '-tf-option0'" [required]="question.type === 'trueOrFalse'" value="0" autocomplete="off">
         <label class="btn btn-outline-primary mx-1 my-1" [for]="'q' + question.index + '-tf-option0'">True</label>
-        <input type="radio" class="btn-check" formControlName="tf-option" [id]="'q' + question.index + '-tf-option1'" [required]="question.type === 'trueOrFalse'" value="1" autocomplete="off">
+        <input type="radio" class="btn-check" formControlName="trueOrFalse" [id]="'q' + question.index + '-tf-option1'" [required]="question.type === 'trueOrFalse'" value="1" autocomplete="off">
         <label class="btn btn-outline-primary mx-1 my-1" [for]="'q' + question.index + '-tf-option1'">False</label>
       </div>
-      <div class="quiz-question-mc text-center" [formGroupName]="'multipleChoice'" *ngIf="question.type === 'multipleChoice'">
+      <div class="quiz-question-mc text-center" *ngIf="question.type === 'multipleChoice'">
         <p class="text-secondary text-center">Answer by selecting the correct option</p>
         <div *ngFor="let option of question.options; index as i">
-          <input type="radio" class="btn-check" formControlName="mc-option" [id]="'q' + question.index + '-mc-option' + i" [value]="i" [required]="question.type === 'multipleChoice'" autocomplete="off">
+          <input type="radio" class="btn-check" formControlName="multipleChoice" [id]="'q' + question.index + '-mc-option' + i" [value]="i" [required]="question.type === 'multipleChoice'" autocomplete="off">
           <label class="btn btn-outline-primary mx-1 my-1" [for]="'q' + question.index + '-mc-option' + i">{{option.option}}</label>
         </div>
       </div>
