--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
@@ -2,8 +2,10 @@
   <div [formGroupName]="'q' + question.index" class="d-flex d-flex mt-5 shadow rounded quiz-question align-items-center">
     <p class="text-secondary fs-5 ms-4 mt-3">#{{question.index + 1}}</p>
     <div class="mx-4 container-fluid mt-3 mb-4">
-      <p class="fs-1 text-center" *ngIf="question.type !== 'trueOrFalse'">{{question.question}}</p>
-      <p class="fs-1 text-center" *ngIf="question.type === 'trueOrFalse'">{{question.question}} <fa-icon [icon]="faArrowRight"></fa-icon> {{question.trueOrFalseOption ? question.trueOrFalseOption : ''}}</p>
+      <div class="fw-bold" [ngClass]="submitted ? correct ? 'text-success' : 'text-danger' : ''">
+        <p class="fs-1 text-center" *ngIf="question.type !== 'trueOrFalse'">{{question.question}}</p>
+        <p class="fs-1 text-center" *ngIf="question.type === 'trueOrFalse'">{{question.question}} <fa-icon [icon]="faArrowRight"></fa-icon> {{question.trueOrFalseOption ? question.trueOrFalseOption : ''}}</p>
+      </div>
       <div class="quiz-question-written" *ngIf="question.type === 'written'">
         <p class="text-secondary text-center">Answer with the corresponding {{question.answerWith}}</p>
         <input type="text" class="form-control text-center shadow-sm fs-4" formControlName="written" required>
@@ -19,7 +21,7 @@
         <p class="text-secondary text-center">Answer by selecting the correct option</p>
         <div *ngFor="let option of question.options; index as i">
           <input type="radio" class="btn-check" formControlName="multipleChoice" [id]="'q' + question.index + '-mc-option' + i" [value]="i" [required]="question.type === 'multipleChoice'" autocomplete="off">
-          <label class="btn btn-outline-primary mx-1 my-1" [for]="'q' + question.index + '-mc-option' + i">{{option.option}}</label>
+          <label class="btn btn-outline-primary mx-1 my-1" [for]="'q' + question.index + '-mc-option' + i">{{option}}</label>
         </div>
       </div>
     </div>
