--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz-question/study-set-quiz-question.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="quiz-question-tf text-center" *ngIf="question.type === 'trueOrFalse'">
         <p class="text-secondary text-center">Answer with whether this is true or false</p>
-        <div *ngFor="let option of question.options; index as i" class="container-fluid">
+        <div *ngFor="let option of question.options; index as i">
           <input type="radio" class="btn-check" formControlName="trueOrFalse" (click)="selectedIndex = i" [id]="'q' + question.index + '-tf-option' + i" [required]="question.type === 'trueOrFalse'" [value]="i" autocomplete="off">
           <label class="btn btn-outline-success mx-1 my-1" *ngIf="submitted && i === correctIndex" [for]="'q' + question.index + '-tf-option' + i">{{option.option}}</label>
           <label class="btn btn-outline-danger mx-1 my-1" *ngIf="submitted && !correct && selectedIndex === i" [for]="'q' + question.index + '-tf-option' + i">{{option.option}}</label>
@@ -22,7 +22,7 @@
       </div>
       <div class="quiz-question-mc text-center" *ngIf="question.type === 'multipleChoice'">
         <p class="text-secondary text-center">Answer by selecting the correct option</p>
-        <div *ngFor="let option of question.options; index as i" class="container-fluid">
+        <div *ngFor="let option of question.options; index as i">
           <input type="radio" class="btn-check" formControlName="multipleChoice" (click)="selectedIndex = i" [id]="'q' + question.index + '-mc-option' + i" [value]="i" [required]="question.type === 'multipleChoice'" autocomplete="off">
           <label class="btn btn-outline-success mx-1 my-1" *ngIf="submitted && i === correctIndex" [for]="'q' + question.index + '-mc-option' + i">{{option.option}}</label>
           <label class="btn btn-outline-danger mx-1 my-1" *ngIf="submitted && !correct && selectedIndex === i" [for]="'q' + question.index + '-mc-option' + i">{{option.option}}</label>
