--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -2,7 +2,7 @@
   <div class="jumbotron align-items-center d-flex min-vh-100">
     <div class="container-fluid options-container rounded">
       <div class="row justify-content-center align-items-center">
-        <div class="quiz-creator text-center shadow rounded mb-3">
+        <div class="quiz-creator text-center shadow-lg rounded mb-3">
           <h1 class="mt-3 mb-5">Create a Quiz</h1>
           <form #optionsForm="ngForm" (ngSubmit)="beginQuiz(optionsForm)" class="fs-5 options-form" ngNativeValidate>
             <div class="form-check form-switch options-buttons">
@@ -30,7 +30,7 @@
               </div>
               <div class="d-flex justify-content-between">
                 <p class="options-text">Number of questions <span class="fs-6 fw-light text-secondary ms-2 options-disclaimer" hidden>(selecting more than 10 will create more than 1 question per card)</span></p>
-                <input type="number" class="form-control h-50 w-25" name="numberOfQuestions" value="1" id="aa" min="1" required ngModel>
+                <input *ngIf="set" type="number" class="form-control h-50 w-25" name="numberOfQuestions" min="1" [max]="set.cards.length" required ngModel>
               </div>
               <div class="d-flex justify-content-end mt-4 mb-4">
                 <button type="submit" class="btn btn-primary">Begin quiz</button>
@@ -50,8 +50,8 @@
     <div class="d-flex d-flex shadow rounded quiz-question align-items-center" *ngIf="submitted">
       <div class="mx-4 container-fluid mt-3 mb-4">
         <div class="progress bg-danger" role="progressbar" aria-label="Warning example">
-          <div class="progress-bar text-bg-danger" style="width: 100%" *ngIf="percentCorrect === 0">0%</div>
-          <div class="progress-bar text-bg-success" [ngStyle]="{'width': percentCorrect + '%'}">{{percentCorrect}}%</div>
+          <div class="progress-bar text-bg-danger w-100" *ngIf="percentCorrect === 0">0%</div>
+          <div class="progress-bar text-bg-success" *ngIf="percentCorrect > 0" [ngStyle]="{'width': percentCorrect + '%'}">{{percentCorrect}}%</div>
         </div>
       </div>
     </div>
@@ -60,6 +60,11 @@
         <scholarsome-study-set-quiz-question [question]="question" [submitted]="submitted" [correct]="question.correct" [parentForm]="quizForm"></scholarsome-study-set-quiz-question>
       </div>
       <button type="submit" class="btn btn-primary container-fluid my-5" [disabled]="submitted">Submit quiz</button>
+      <div class="my-5"></div>
     </form>
   </div>
+</div>
+
+<div class="d-flex container-fluid bg-white fixed-bottom shadow">
+  <fa-icon class="fs-2 back-arrow" [routerLink]="['/study-set', setId]" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
 </div>
