Fix margin with study set editing, login/register button colors, remove unneeded auth buttons from navbar

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="background">
   <div class="login-desktop mt-3 me-3">
     <button class="btn btn-lg btn-outline-light me-2" (click)="this.modalService.modal.next('login-open')">Log in</button>
-    <button class="btn btn-lg btn-outline-light"><a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><fa-icon [icon]="faGithub"></fa-icon></a></button>
+    <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><button class="btn btn-lg btn-outline-light"><fa-icon [icon]="faGithub"></fa-icon></button></a>
   </div>
   <img class="logo" src="assets/scholarsome-logo-purple-lowercase.svg">
   <div class="information">
