--- a/apps/front/src/app/shared/notfound/notfound.component.html
+++ b/apps/front/src/app/shared/notfound/notfound.component.html
@@ -1,3 +1,5 @@
+<div class="navbar-spacing"></div>
+
 <div class="d-flex text-center justify-content-center mt-5 mx-2">
   <div class="col">
     <h1 class="fw-bold display-2">Whoops, we couldn't find that page!</h1>
