Add ability to edit set visibility

--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -1,3 +1,5 @@
+<div class="navbar-spacing"></div>
+
 <fieldset [disabled]="formDisabled">
   <div class="py-4">
     <div class="create-header d-flex justify-content-between text-nowrap">
